# dotfiles

./: .chezmoiroot  .gitignore  README.md  README.org  install.sh
assets/lockscreens/: pneguin_lockscreen.xcf
assets/wallpapers/: gen2pink.xcf  hostname_pink.xcf
etc/: nsswitch.conf.merge
etc/geoclue/: geoclue.conf.append  geoclue.conf.merge
guix/: channels.scm  util.scm  util.scm.save
home/: dot_aliases  dot_aspell.en.prepl  dot_bash_profile  dot_bashrc  dot_bcrc  dot_colours  dot_environment  dot_gitconfig  private_dot_aliases  private_dot_aliases.tmpl  private_dot_aspell.conf  private_dot_aspell.en.pws  private_dot_bashrc  private_dot_environment  private_dot_environment.tmpl  private_dot_gitconfig  private_dot_nanorc
home/dot_config/: private_mimeapps.list
home/dot_emacs.d/: early-init.el
home/private_dot_config/: mimeapps.list  sway-bar-status.json.tmpl
home/private_dot_emacs.d/: early-init.el  init.el
home/private_dot_librewolf/: profiles.ini
home/private_dot_mozilla/: firefox
home/private_dot_scripts/: executable_flatten-cbz.sh  executable_sort-into-dirs.sh
legacy/: executable_window-title-as-workspace.sh
legacy/cron/: template.sh
legacy/dwm/: .gitignore  .upstream_commit  LICENSE  Makefile  (+3 more)
legacy/dwm-bar/: dwm_bar.sh  dwm_bar_old.sh  iso_time.sh
package_installers/: cargo.sh  pacman.sh  pip.sh
src/sway-bar-status/: Cargo.toml  README.md  install.sh
src/sway-bar-status/src/: config.rs  main.rs
src/sway-window-title-as-workspace/: Cargo.toml  README.md  install.sh
src/sway-window-title-as-workspace/src/: main.rs  wl_window.rs
(+225 files in other folders)
